# evtx-viewer

./: .gitattributes  .gitignore  LICENSE  README.md  evtxview.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/evtxview/: __init__.py  __main__.py  cli.py  config.py  constants.py  export.py  presets.py  reader.py  record.py  render.py  util.py
tests/: conftest.py  test_cli.py  test_config.py  test_fixtures.py  test_parsing.py  test_presets.py
tests/fixtures/: printservice-admin.evtx  security.evtx
